Updated to latest master changes