@@ -2,5 +2,4 @@
 :: Gaia Sky start script
 ::
 
-
-.\jre\bin\java -Xms2g -Xmx3g -XX:+UseConcMarkSweepGC -cp "lib\*" gaia.cu9.ari.gaiaorbit.desktop.GaiaSkyDesktop
+.\jre\bin\java -Xms2g -Xmx3g -XX:+UseG1GC -Dassets.location=.\ -cp "lib\*" gaia.cu9.ari.gaiaorbit.desktop.GaiaSkyDesktop
